--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@nx-invalid-eslint-typescript/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "lint": "nx run-many -t lint"
+  },
   "private": true,
   "dependencies": {
     "axios": "^1.6.0",
