fix version of GH actions

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,12 +16,12 @@ jobs:
     name: 'Lint: node-22, ubuntu-latest'
     steps:
       - name: Checkout
-        uses: actions/checkout@4
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Set node version to 22
-        uses: actions/setup-node@4
+        uses: actions/setup-node@v4
         with:
           node-version: 22
 
